--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "pkg/nition/recog"]
 	path = pkg/nition/recog
-	url = https://github.com/rapid7/recog.git
+	url = https://github.com/RumbleDiscovery/recog
